--- a/.github/workflows/build-and-push-test-image.yml
+++ b/.github/workflows/build-and-push-test-image.yml
@@ -41,8 +41,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            neosmemo/memos
-            ghcr.io/usememos/memos
+            hm289/memos
+            ghcr.io/hm289/memos
           flavor: |
             latest=false
           tags: |
